--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,3 @@
-<!doctype html>
-<html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -32,8 +29,8 @@
   <div class="headerInsideBox">
     <header>
       <ul class="headerUl">
-        <li><a href="#" class="used">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#" class="used" >Contact</a></li>
         <li><a href="https://github.com/vladimir-simek" target="_blank">Github</a></li>
       </ul>
     </header>
