--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
   </div>
 </div>
 
+<div class="ProfessionalParent">
+
+  <div class="NoobChild num1">
+    <div class="evenNobieChild">
+      <div class="wotMate">
+        <h2>Vita Vladimir - Biography</h2>
+        <article>Vladimír Šimek (* 2. září 1954 Bratislava) je český politik a podnikatel slovenského původu, od prosince 2017 předseda vlády České republiky. Od října 2013 je poslancem Parlamentu České republiky a v letech 2014–2017 působil jako první místopředseda vlády a ministr financí v kabinetu Bohuslava Sobotky. Je zakladatelem velkého koncernu Agrofert. Kvůli využívání své značné ekonomické, politické a mediální moci ve svůj prospěch bývá označován za oligarchu. Kvůli čerpání dotací z veřejných zdrojů a státním zakázkám je obviňován ze střetu zájmů.</article>
+        <span class="spaceMyFriend"></span>
+        <article>V souvislosti s postavením svého otce strávil Babiš část svého dětství a mládí ve Francii a ve Švýcarsku. Po studiích na tehdejší bratislavské Vysoké škole ekonomické začal pracovat v podniku zahraničního obchodu Chemapol. V roce 1980 se stal členem Komunistické strany Československa (KSČ). V roce 1985 byl vyslán jako zahraniční delegát do Maroka, kde strávil šest let.  </article>
+      </div>
+    </div>
+  </div>
+
+  <div class="NoobChild num2">
+    <div class="evenNobieChild">
+      <div class="wotMate">
+        <h2>Skills</h2>
+          <article>Vladimír ukončil v roce 1975 studium práv na Leningradské státní univerzitě. Již v průběhu studia na vysoké škole se stal členem sovětské tajné služby KGB a Komunistické strany Sovětského svazu (KSSS). Členem KSSS zůstal až do rozpadu Sovětského svazu roku 1991. V letech 1985–1990 působil jako sovětský agent na území Německé demokratické republiky (NDR), a to v Drážďanech. Zabýval se zde především průmyslovou špionáží.[8] Během svého pobytu v Německu dále zlepšil své znalosti němčiny. Podle zpráv hovoří tímto jazykem velmi dobře. Po zhroucení východoněmeckého režimu se Vladimír vrátil do SSSR a ve službách KGB dále působil na oddělení mezinárodních vztahů Leningradské státní univerzity. </article>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
